# veil

./: .gitignore  .latexmkrc  Cargo.toml  LICENSE-MIT  Makefile  Makefile.toml  README.md  build.rs  design.md  manual.md  references.bib  references.bibtex  rustfmt.toml
.cargo/: config.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decrypt.rs  encrypt.rs  sign.rs  verify.rs
veil/: Cargo.toml
veil-cli/: Cargo.toml  build.rs
veil-cli/share/: _veil  _veil.ps1  veil-cli.bash  veil.fish
veil-cli/src/: cli.rs  main.rs
veil-cli/tests/: cli_test.rs  integration_test.rs
veil-lib/: Cargo.toml
veil-lib/benches/: veil_bench.rs
veil-lib/src/: akem.rs  common.rs  hpke.rs  lib.rs  mres.rs  pbenc.rs  scaldf.rs  schnorr.rs
veil/benches/: benches.rs  veil_bench.rs
veil/src/: akem.rs  blockio.rs  digest.rs  duplex.rs  ecc.rs  errors.rs  kemeleon.rs  keys.rs  lib.rs  main.rs  message.rs  mres.rs  pbenc.rs  scaldf.rs  schnorr.rs  sig.rs  sres.rs  support.rs  util.rs  veil.rs
veil/tests/: fuzz.rs
veil/tests/__fuzz__/decrypt/afl_state/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
veil/tests/__fuzz__/decrypt/afl_state/queue/: id:000001,src:000000,op:havoc,rep:16,+cov  id:000002,src:000000,op:havoc,rep:64,+cov  id:000003,src:000000,op:havoc,rep:128,+cov  id:000004,src:000000,op:havoc,rep:32,+cov  id:000006,src:000000,op:havoc,rep:32,+cov  id:000007,src:000003,op:flip1,pos:8,+cov  id:000008,src:000003,op:flip1,pos:8,+cov  id:000009,src:000003,op:flip1,pos:8  id:000010,src:000003,op:flip1,pos:8  id:000011,src:000003,op:flip1,pos:8  id:000012,src:000003,op:flip1,pos:8  id:000013,src:000003,op:flip1,pos:8  id:000014,src:000003,op:flip1,pos:98  id:000015,src:000003,op:flip2,pos:8  id:000016,src:000003,op:flip4,pos:8  id:000017,src:000003,op:arith8,pos:8,val:+5  id:000018,src:000003,op:arith8,pos:8,val:+7  id:000019,src:000003,op:arith8,pos:8,val:+9,+cov  id:000020,src:000003,op:arith8,pos:8,val:+10  id:000021,src:000003,op:arith8,pos:8,val:+17  id:000022,src:000003,op:int16,pos:7,val:be:+32  id:000023,src:000003,op:int16,pos:7,val:+4096  id:000024,src:000003,op:havoc,rep:4  id:000025,src:000003,op:havoc,rep:8  id:000026,src:000003,op:havoc,rep:32  id:000027,src:000006,op:flip1,pos:8,+cov  id:000028,src:000006,op:arith8,pos:8,val:+6  id:000029,src:000006,op:havoc,rep:4,+cov
veil/tests/__fuzz__/encrypt/afl_state/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
veil/tests/__fuzz__/encrypt/afl_state/queue/: id:000000,orig:initial  id:000001,src:000000,op:havoc,rep:16,+cov  id:000003,src:000000,op:havoc,rep:4,+cov  id:000004,src:000000,op:havoc,rep:4,+cov  id:000006,src:000001,op:havoc,rep:32,+cov  id:000007,src:000001,op:havoc,rep:4,+cov  id:000008,src:000006,op:flip1,pos:8  id:000009,src:000006,op:flip1,pos:8,+cov  id:000010,src:000006,op:flip1,pos:8  id:000011,src:000006,op:flip1,pos:8  id:000012,src:000006,op:flip2,pos:8  id:000013,src:000006,op:flip2,pos:8,+cov  id:000014,src:000006,op:flip4,pos:8  id:000015,src:000006,op:arith8,pos:8,val:-1  id:000016,src:000006,op:arith8,pos:8,val:-3  id:000017,src:000006,op:arith8,pos:8,val:+5  id:000018,src:000006,op:arith8,pos:8,val:+6  id:000019,src:000006,op:arith8,pos:8,val:+9  id:000020,src:000006,op:arith8,pos:8,val:+13  id:000021,src:000006,op:arith8,pos:8,val:-20  id:000022,src:000006,op:arith8,pos:8,val:-21  id:000023,src:000006,op:arith8,pos:8,val:+23  id:000024,src:000006,op:arith8,pos:8,val:-33  id:000025,src:000006,op:arith8,pos:8,val:-34  id:000026,src:000006,op:arith8,pos:8,val:-35,+cov  id:000027,src:000006,op:int16,pos:7,val:+1000  id:000028,src:000006,op:int32,pos:6,val:be:+512  id:000029,src:000006,op:int32,pos:6,val:be:+1024  id:000030,src:000006,op:havoc,rep:8,+cov  id:000031,src:000006,op:havoc,rep:4  id:000032,src:000006,op:havoc,rep:4,+cov  id:000033,src:000006,op:havoc,rep:8,+cov  id:000034,src:000006,op:havoc,rep:4  id:000035,src:000006,op:havoc,rep:2  id:000037,src:000032,op:havoc,rep:8
veil/tests/__fuzz__/sign/afl_state/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
veil/tests/__fuzz__/sign/afl_state/queue/: id:000001,src:000000,op:havoc,rep:8,+cov  id:000003,src:000000,op:havoc,rep:64,+cov  id:000004,src:000000,op:havoc,rep:2,+cov  id:000006,src:000003,op:flip1,pos:6  id:000007,src:000003,op:flip1,pos:8,+cov  id:000008,src:000003,op:flip1,pos:8,+cov  id:000009,src:000003,op:flip1,pos:8  id:000010,src:000003,op:flip1,pos:8  id:000011,src:000003,op:flip1,pos:8,+cov  id:000012,src:000003,op:flip1,pos:8  id:000013,src:000003,op:flip2,pos:8,+cov  id:000014,src:000003,op:arith8,pos:8,val:+5,+cov  id:000015,src:000003,op:arith8,pos:8,val:+7  id:000016,src:000003,op:arith8,pos:8,val:+9,+cov  id:000017,src:000003,op:arith8,pos:8,val:+10  id:000018,src:000003,op:arith8,pos:8,val:+17  id:000019,src:000003,op:arith8,pos:8,val:+20  id:000020,src:000003,op:arith8,pos:8,val:+33  id:000021,src:000003,op:int16,pos:7,val:+4096  id:000022,src:000003,op:int32,pos:6,val:be:+4096  id:000023,src:000003,op:havoc,rep:2  id:000024,src:000003,op:havoc,rep:2,+cov  id:000025,src:000003,op:havoc,rep:4  id:000026,src:000003,op:havoc,rep:32  id:000027,src:000003,op:havoc,rep:128,+cov  id:000028,src:000003,op:havoc,rep:4,+cov  id:000029,src:000003,op:havoc,rep:2  id:000030,src:000003,op:havoc,rep:2,+cov  id:000031,src:000007,op:flip1,pos:33,+cov  id:000032,src:000027,op:flip1,pos:8,+cov  id:000033,src:000027,op:flip2,pos:8,+cov  id:000034,src:000027,op:flip2,pos:8,+cov  id:000035,src:000027,op:flip4,pos:8,+cov  id:000036,src:000027,op:arith8,pos:8,val:+14,+cov
veil/tests/__fuzz__/verify/afl_state/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
veil/tests/__fuzz__/verify/afl_state/queue/: id:000001,src:000000,op:havoc,rep:64,+cov  id:000003,src:000000,op:havoc,rep:2,+cov  id:000004,src:000000,op:havoc,rep:8  id:000006,src:000000,op:havoc,rep:4  id:000007,src:000000,op:havoc,rep:4  id:000008,src:000000,op:havoc,rep:32,+cov  id:000009,src:000000,op:havoc,rep:64,+cov  id:000010,src:000000,op:havoc,rep:16,+cov  id:000012,src:000000,op:havoc,rep:4,+cov  id:000014,src:000000,op:havoc,rep:2,+cov  id:000015,src:000000,op:havoc,rep:4  (+41 more)
(+237 files in other folders)
