[package]
name = "veil"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]
description = "Stupid crypto tricks."

[features]
default = ["cli"]
cli = ["anyhow", "clap", "clap_complete", "clio", "mimalloc", "rpassword", "shell-words", "unicode-normalization"]

[dependencies]
bs58 = "0.4.0"
constant_time_eq = "0.2.4"
crrl = "0.3.0"
cyclist = { version = "0.3.3", default-features = false, features = ["keccyak"] }
rand = { version = "0.8.5", features = ["min_const_gen"] }
thiserror = "1.0.34"

# cli-only deps
anyhow = { version = "1.0.64", optional = true }
clap = { version = "3.2.21", features = ["derive"], optional = true }
clap_complete = { version = "3.2.5", optional = true }
clio = { version = "0.2.3", features = ["clap-parse"], optional = true }
mimalloc = { version = "0.1.29", optional = true }
rpassword = { version = "7.0.0", optional = true }
shell-words = { version = "1.1.0", optional = true }
unicode-normalization = { version = "0.1.21", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
criterion = { version = "0.4.0", features = ["html_reports"] }
duct = "0.13.5"
rand_chacha = "0.3.1"
tempfile = "3.3.0"

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[[bin]]
name = "veil"
required-features = ["cli"]

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev.package.crrl]
opt-level = 3

[profile.dev.package.cyclist]
opt-level = 3

[profile.dev.package.keccak-p]
opt-level = 3
