[workspace]
members = ["benchmarks", "veil", "veil-cli", "xtask"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev.package.crrl]
opt-level = 3

[workspace.lints.rust]
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
cognitive_complexity = "warn"
missing_const_for_fn = "warn"
doc_markdown = "warn"
missing_errors_doc = "warn"
semicolon_if_nothing_returned = "warn"
