[workspace]
members = ["benchmarks", "veil", "veil-cli", "xtask"]
resolver = "2"

[profile.dev.package.curve25519-dalek]
opt-level = 3

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.rust]
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
cognitive_complexity = "warn"
missing_const_for_fn = "warn"
doc_markdown = "warn"
missing_errors_doc = "warn"
semicolon_if_nothing_returned = "warn"
ptr_offset_with_cast = "allow"         # required for arrayref
