[package]
name = "veil-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.1", features = ["derive"] }
libfuzzer-sys = "0.4.7"
rand = "0.8.5"
veil = { path = "../veil" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decrypt"
path = "fuzz_targets/decrypt.rs"
test = false
doc = false

[[bin]]
name = "encrypt"
path = "fuzz_targets/encrypt.rs"
test = false
doc = false

[[bin]]
name = "sign"
path = "fuzz_targets/sign.rs"
test = false
doc = false

[[bin]]
name = "verify"
path = "fuzz_targets/verify.rs"
test = false
doc = false
