[package]
name = "veil-cli"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "../LICENSE-MIT", "../LICENSE-APACHE", "../README.md"]
description = "Stupid crypto tricks."
default-run = "veil"

[dependencies]
bunt = "0.2.8"
clap = { version = "4.5.1", features = ["deprecated", "derive"] }
clap_complete = "4.5.0"
console = "0.15.8"
rand = { version = "0.8.5", features = ["min_const_gen"] }
thiserror = "1.0.57"
veil = { path = "../veil" }

[dev-dependencies]
anyhow = "1.0.80"
xshell = "0.2.5"

[[bin]]
name = "veil"
path = "src/cli.rs"

[lints]
workspace = true
