[package]
name = "veil-cli"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "../LICENSE-MIT", "../LICENSE-APACHE", "../README.md"]
description = "Stupid crypto tricks."
default-run = "veil"

[dependencies]
bunt = "0.2.8"
clap = { version = "4.5.30", features = ["deprecated", "derive"] }
clap_complete = "4.5.45"
console = "0.15.10"
num_cpus = "1.16.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
thiserror = "2.0.11"
veil = { path = "../veil" }

[dev-dependencies]
anyhow = "1.0.96"
xshell = "0.2.7"

[[bin]]
name = "veil"
path = "src/cli.rs"

[lints]
workspace = true
