[package]
name = "veil-lib"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2018"

[dependencies]
base58 = "0.1.0"
byteorder = "1.4"
curve25519-dalek = "3"
rand = "0.7"
rand_core = "0.5"
strobe-rs = "0.6"
zeroize = "1"


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "veil_bench"
harness = false
