[package]
name = "veil"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "../LICENSE-MIT", "../LICENSE-APACHE", "../README.md"]
description = "Stupid crypto tricks."

[dependencies]
bs58 = "0.5.1"
fips203 = { version = "0.4.2", default-features = false, features = ["ml-kem-768"] }
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-65"] }
lockstitch = { version = "0.25.3", features = ["zeroize"] }
num-bigint = "0.4.6"
rand = { version = "0.8.5", features = ["min_const_gen"] }
thiserror = "2.0.10"
zeroize = "1.8.1"

[dev-dependencies]
assert_matches = "1.5.0"
bolero = "0.12.0"
expect-test = "1.5.1"
rand_chacha = "0.3.1"

[lints]
workspace = true
