[package]
name = "veil"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "../LICENSE-MIT", "../LICENSE-APACHE", "../README.md"]
description = "Stupid crypto tricks."

[dependencies]
bs58 = "0.5.1"
fips203 = { version = "0.4.3", default-features = false, features = ["ml-kem-768"] }
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-65"] }
lockstitch = "0.29.0"
num-bigint = "0.4.6"
rand = { version = "0.8.5", features = ["min_const_gen"] }
subtle = "2.6.1"
thiserror = "2.0.12"
zeroize = "1.8.1"

[dev-dependencies]
assert_matches = "1.5.0"
bolero = "0.13.2"
expect-test = "1.5.1"
rand_chacha = "0.3.1"

[lints]
workspace = true
